--- a/angular.json
+++ b/angular.json
@@ -18,8 +18,7 @@
               "cross-fetch",
               "p-cancelable",
               "tiny-emitter",
-              "detect-node",
-              "@okta/okta-signin-widget"
+              "detect-node"
             ],
             "outputPath": "dist/angular-ecommerce",
             "index": "src/index.html",
@@ -33,8 +32,7 @@
             "styles": [
               "src/styles.css",
               "node_modules/bootstrap/dist/css/bootstrap.min.css",
-              "node_modules/@fortawesome/fontawesome-free/css/all.min.css",
-              "node_modules/@okta/okta-signin-widget/dist/css/okta-sign-in.min.css"
+              "node_modules/@fortawesome/fontawesome-free/css/all.min.css"
             ],
             "scripts": []
           },
